--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   path: ^1.9.0
   synchronized: ^3.1.0+1
+  bloc: ^8.1.0
+  flutter_bloc: ^8.1.2
 
 dev_dependencies:
   flutter_test:
