--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   synchronized: ^3.1.0+1
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
+  flutter_slidable: any
 
 dev_dependencies:
   flutter_test:
