--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   bloc: ^8.1.0
   flutter_bloc: ^8.1.2
   flutter_slidable: any
+  webview_flutter: any
+  package_info_plus: any
 
 dev_dependencies:
   flutter_test:
