--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: any
+  sqflite_common_ffi: ^2.2.0
+  path_provider_platform_interface: any
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
