--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,10 @@ dependencies:
   webview_flutter: any
   package_info_plus: any
   in_app_update: 
+  powersync: ^1.16.2
+  supabase: ^2.10.0
+  supabase_flutter: ^2.10.3
+  uuid: ^4.5.2
 
 dev_dependencies:
   flutter_test:
