--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   supabase: ^2.10.0
   supabase_flutter: ^2.10.3
   uuid: ^4.5.2
+  supabase_auth_ui: ^0.5.5
 
 dev_dependencies:
   flutter_test:
