--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   supabase_flutter: ^2.10.3
   uuid: ^4.5.2
   supabase_auth_ui: ^0.5.5
+  app_links: ^6.4.1
 
 dev_dependencies:
   flutter_test:
