--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   uuid: ^4.5.2
   supabase_auth_ui: ^0.5.5
   app_links: ^6.4.1
+  share_plus: ^12.0.1
 
 dev_dependencies:
   flutter_test:
